--- a/_posts/2022-09-25-PQ-韓國產業依賴中國過深-談不了-經濟安全.html
+++ b/_posts/2022-09-25-PQ-韓國產業依賴中國過深-談不了-經濟安全.html
@@ -56,7 +56,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk.jpg" alt="" class="wp-image-73767" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk-768x512.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>中國的寧德時代新能源科技公司（CATL）為世界排名第二的電動車電池生產大廠。<br>（圖／CATL）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk.jpg" alt="" class="wp-image-73767" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/08/7d25c4b1-phpdasfuk-768x512.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>中國的寧德時代新能源科技公司（CATL）為世界排名第二的電動車電池生產大廠。<br>（圖／CATL）</figcaption></figure></div>
 
 
 
@@ -76,7 +76,7 @@ author: 林貝利
 
 
 
-<p>報告分析了韓國從日本、美國和中國個別進口了多少「關鍵品項」。下述會引用網路媒體<a href="https://www.iheadlinenews.co.kr/news/articleView.html?idxno=58329&amp;page=2&amp;total=849">《Headline News》</a>（2022 年 5 月 30 日）的報導，它整理的很好。它在韓美峰會 10 天後發佈，可以說這是一篇在非常好的時機點出問題的好報導。</p>
+<p>報告分析了韓國從日本、美國和中國個別國家到底進口了多少「關鍵品項」？</p>
 
 
 
@@ -92,7 +92,7 @@ author: 林貝利
 
 
 
-<p class="pqnote">〈由於烏克蘭局勢以及中國上海因疫情封城（2022 年 2 月底至 8 月上旬），導致全球供應鏈動盪加劇。其中，對韓國而言需要重點管理的進口品項有很多都是中國製造的，研究報告結果表明韓國迫切需要解決這種偏重於中國的現象。<a href="https://president.jp/articles/-/61333" target="_blank" rel="noopener"><br><br></a>根據韓國全國經濟人聯合會發表的《韓國經濟產業關鍵材料的現狀與建議》報告，這裡說的「需要管理的關鍵進口品項」是指「進口依存度為 90% 以上」，而在「進口競爭力絕對不利的品項」中的「進口額前 30%」有 228 個品項。 這 228 個品項中，中國製造有 172 個，佔 75.5%，日本製造 32 個，佔 14.0%，美國製造 24 個，佔 10.5%。<a href="https://president.jp/articles/-/61333" target="_blank" rel="noopener"><br><br></a>還有另外 133 個品項被單獨列出，這些品項被判定是脆弱供應鏈，當中幾乎都是中國製造，佔 95.4%，日本製和美國製各自都在 2.3% 的水準。這些結果表明，由於關鍵進口品項太過集中在中國，使韓國整個供應鏈變得非常脆弱，就像韓國去年經歷的尿素危機一樣。〉</p>
+<p class="pqnote">〈由於烏克蘭局勢以及中國上海因疫情封城（2022 年 2 月底至 8 月上旬），導致全球供應鏈動盪加劇。其中，對韓國而言需要重點管理的進口品項有很多都是中國製造的，研究報告結果表明韓國迫切需要解決這種偏重於中國的現象。<a href="https://president.jp/articles/-/61333" target="_blank" rel="noopener"><br><br></a>根據韓國全國經濟人聯合會發表的《韓國經濟產業關鍵材料的現狀與建議》報告，這裡說的「需要管理的關鍵進口品項」是指「進口依存度為 90% 以上」，而在「進口競爭力絕對不利的品項」中的「進口額前 30%」有 228 個品項。 這 228 個品項中，中國製造有 172 個，佔 75.5%，日本製造 32 個，佔 14.0%，美國製造 24 個，佔 10.5%。<a href="https://president.jp/articles/-/61333" target="_blank" rel="noopener"><br><br></a>不僅上述的 228 個品項，還有另外 133 個品項被單獨列出，這些品項被判定是脆弱供應鏈，當中幾乎都是中國製造，佔 95.4%，日本製和美國製各自都在 2.3% 的水準。這些結果表明，由於<strong>關鍵進口品項太過集中在中國</strong>，<strong>使韓國整個供應鏈變得非常脆弱</strong>，就像韓國去年經歷的尿素危機一樣。〉</p>
 
 
 
@@ -108,15 +108,15 @@ author: 林貝利
 
 
 
-<p>當然韓國確實是依賴中國，但在供給安全性有問題的 133 個品項中，中國占 95.4%，日本和美國占 2.3%。 對於韓國來說，這應該才正是「中國風險」，可是現實中很不可思議的沒有引起熱議，沒有人指出這個問題，這似乎更具風險。</p>
+<p>當然韓國確實是依賴中國，但在供給安全性有問題的 133 個品項中，中國占 95.4%，日本和美國占 2.3%。 對於韓國來說，這應該才正是「中國風險」，可是現實中很不可思議的並沒有引起熱議，<strong>沒有人指出「中國風險」，這似乎更具風險</strong>。</p>
 
 
 
-<p>那篇報導雖然也是有大媒體提到，但反倒是網路媒體整理得比較好。 與其說是不指出，還是有什麼理由不去指出來嗎？</p>
+<p>《韓國經濟產業關鍵材料的現狀與建議》報告雖然也是有大媒體提到，但反倒是網路媒體《HeadlineNewsi》更為關注。然而，韓國各大媒體之所以不特別指出「中國風險」，難道背後有什麼理由？</p>
 
 
 
-<p>在同一份報告的日本、美國和中國製個別的關鍵進口品項中，「中國製造」包括電氣產品、機械／計算機、鋼鐵、有機和無機化合物、玻璃、醫療用品、有色金屬等工業原料、錳（鋼鐵生產所需）、石墨（電動汽車電池所需）、鎂（汽車輕量化所需）等。 由於品項眾多，報告直言「可以看作是會影響到韓國產業的所有領域」。</p>
+<p>在同一份報告的日本、美國和中國製個別的關鍵進口品項中，「<strong>中國製造</strong>」包括電氣產品、機械／計算機、鋼鐵、有機和無機化合物、玻璃、醫療用品、有色金屬等工業原料、錳（鋼鐵生產所需）、石墨（電動汽車電池所需）、鎂（汽車輕量化所需）等。 由於品項眾多，報告直言「可以看作是會<strong>影響到韓國產業的所有領域</strong>」。</p>
 
 
 
@@ -128,7 +128,7 @@ author: 林貝利
 
 
 
-<p>在這種情況下，韓國真的能構築半導體和電池等「在自由民主陣營下的經濟安全」供應鏈嗎？</p>
+<p>在這種情況下，<strong>韓國真的能構築半導體和電池等「在自由民主陣營下的經濟安全」供應鏈</strong>嗎？</p>
 
 
 
@@ -140,11 +140,15 @@ author: 林貝利
 
 
 
-<p>日本已經選擇台灣作為半導體相關的合作夥伴。世界著名半導體廠商台積電在日本設廠就是其中的一個代表。應該要準備加入這一架構的時候，韓國被文在寅政府所絆住。把其他事情都擱置一旁，只談和北韓交好。但日本和美國或其他人並沒有叫韓國不要跟北韓好。</p>
+<p>日本已經選擇台灣作為半導體相關的合作夥伴。世界著名半導體廠商台積電在日本設廠就是其中的一個代表。應該要準備加入這一架構的時候，韓國則被文在寅政府所絆住。把其他事情都擱置一旁，只談和北韓交好。而現在韓國在尹錫悅政府領導下，是否意識到這一致命的延誤？</p>
 
 
 
-<p>只是「現在應該不是做這件事的時候」。不管尹錫悅政府是否意識到這一致命的延誤，他們現在也只是把其他一切都放在一旁，只談和北韓交惡。但也沒有人阻止韓國和北韓交惡。只是應該還有其他事情要做吧。</p>
+<p>尹錫悅政府在今（2022）年 5 月就職演說與就職100天重申：只要北韓願意停止發展核武、進行去核化，韓國願分階段提供北韓經濟援助。韓國對北韓經濟援助帶有條件甚至要脅，讓北韓覺得荒謬透頂，也因此，韓國與北韓關係有惡化的危機。</p>
+
+
+
+<p>不管未來韓國要與北韓是友好還是交惡，只是，現階段，尹錫悅政府領導下的韓國，應該還有其他的事情要做吧 ─ 如「中國風險」？</p>
 
 
 
