--- a/_posts/2022-09-26-INITIUM-伊朗库尔德女权活动家-大家一直预言-下一场一定是女性革命.html
+++ b/_posts/2022-09-26-INITIUM-伊朗库尔德女权活动家-大家一直预言-下一场一定是女性革命.html
@@ -9,7 +9,7 @@ author: "《同时》"
 ---
 
 <p>「“和过往相比，政府更弱了，他们腐败、没钱，也逐渐丧失了民心和信任。”」</p><p>《同时》</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220926-opinion-note-iran-feminism-activist/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/6bc4871cbc6f40ba815af068d7ed27e5.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月23日，柏林，示威者剪掉头发以示对伊朗妇女的支持后，一堆头髪放在Mahsa Amini的照片旁边。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年9月23日，柏林，示威者剪掉头发以示对伊朗妇女的支持后，一堆头髪放在Mahsa Amini的照片旁边。<span class="credit">摄：Sean Gallup/Getty Images</span></figcaption></figure><p><small>【编者按】：库尔德族头巾女孩阿米尔之死引发的伊朗街头抗议，到今天已经进入到第十天。日前，《同时》访问了伊朗库尔德左翼活动家Parva（化名），她曾经生活在德黑兰，活跃于女性主义、劳工和族群议题等众多领域，近年移居海外。访问中她向人们解释，这场运动为什么会发生、哪些人在街上抗争，以及技术和社交媒体在运动中扮演的角色。<a href="https://mp.weixin.qq.com/s/m6p_j1jfj7ckE_pij0unTA">本文</a>乃《端传媒》获《同时》授权转载。</small></p>
+            <figcaption itemprop="caption">2022年9月23日，柏林，示威者剪掉头发以示对伊朗妇女的支持后，一堆头髪放在Mahsa Amini的照片旁边。<span class="credit">摄：Sean Gallup/Getty Images</span></figcaption></figure><p><small>【编者按】：库尔德族头巾女孩阿米尼之死引发的伊朗街头抗议，到今天已经进入到第十天。日前，《同时》访问了伊朗库尔德左翼活动家Parva（化名），她曾经生活在德黑兰，活跃于女性主义、劳工和族群议题等众多领域，近年移居海外。访问中她向人们解释，这场运动为什么会发生、哪些人在街上抗争，以及技术和社交媒体在运动中扮演的角色。<a href="https://mp.weixin.qq.com/s/m6p_j1jfj7ckE_pij0unTA">本文</a>乃《端传媒》获《同时》授权转载。</small></p>
 <p><strong>（《同时》是一个自媒体，关于抵抗的自我教育，也是大家努力保持联结的组织尝试。）</strong></p>
 <h2>1</h2>
 <blockquote>
