--- a/_posts/2022-09-26-INITIUM-伊朗库尔德女权活动家-大家一直预言-下一场一定是女性革命.html
+++ b/_posts/2022-09-26-INITIUM-伊朗库尔德女权活动家-大家一直预言-下一场一定是女性革命.html
@@ -56,7 +56,7 @@ author: "《同时》"
 <p>这次传播的比较多的关于instagram和whatsapp在伊朗被禁的事情，事实上，大部分通讯工具一直处于被禁的状态，脸书、推特、油管、抖音（tiktok）都被禁了很多年了，大家只能用VPN来使用，唯一没被禁的就是instagram和whatsapp，这两个这几天也进入了被禁的行列。同时，在instagram、whatsapp和脸书上，只要是伊朗电话号码注册的账号，无论是在国内还是国外，这几天账号都出现了连接问题，即便是在海外的伊朗人，用伊朗号码注册的这几个平台的账号发信息，也非常非常慢。人们上街抗议META在和伊朗政府合作。就像Anonymous说的，扎克伯格不是第一次做这样的事，在之前缅甸政变、叙利亚战争期间，他都在和那些地方的政府合作，不过我们无从得知他这次是不是有跟伊朗政府合作。</p>
 <p>到目前为止，网络没有全部被切断。在一些地方，在特定的时间，家里的路由器是有信号的，但是非常微弱，没办法传图片甚至语音信息，只能打字。我的家人在伊朗的库尔德地区生活，我每天都在和我的家人和一些朋友（他们有的在德黑兰有的在库尔德地区）联系，刚刚才跟家人通完电话，他们在有信号的时候会跟我讲一些现场的事情，尽管信号很弱。刚刚官方宣布断网，但是断了半小时后，我姐姐就又连上网了。不过我也有不少朋友已经至少三天没有上过线了，联系不到他们。也因为网络的阻断，让在外面的人难以看到抗争的全貌，因为很多地方的照片、视频和报道流不出来。</p>
 <p>在伊朗，在精英阶层之中，推特是最受欢迎的社交媒体，对于普通大众，instagram是使用最为广泛的，Tiktok则是在初、高中生和大学低年级的学生间最受欢迎。我妹妹今年22岁，她总是会给我发Tiktok上面的东西，但我对那玩意儿一无所知，我没有注册过tiktok。现在我妹妹正在街上参与抗争。我爸爸也在街上，他已经65岁了。</p>
-<p>我感觉这次运动的主体是“Tiktok一代”，也就是年轻人和学生群体。#MahsaAmini 的标签在Tiktok上有1亿4500万次的转发，比伊朗的人口数量要大得多。这个标签之所以在Tiktok上传播如此之广要归功于kpop团体BTSboys在伊朗的粉丝，他们最知道怎么制造话题，是他们让这个标签在Tiktok上火了起来。还有那些游戏玩家，这个群体原本是伊朗最不政治化的群体，但现在那些线上游戏上全部在讨论Mahsa。所以，这场抗争的确不是我这一代人的抗争，我们这代人只是跟随着更年轻的一代。</p>
+<p>我感觉这次运动的主体是“Tiktok一代”，也就是年轻人和学生群体。#MahsaAmini 的标签在Tiktok上有1亿4500万次的转发，比伊朗的人口数量要大得多。这个标签之所以在Tiktok上传播如此之广要归功于kpop团体BTS（防弹少年团）在伊朗的粉丝，他们最知道怎么制造话题，是他们让这个标签在Tiktok上火了起来。还有那些游戏玩家，这个群体原本是伊朗最不政治化的群体，但现在那些线上游戏上全部在讨论Mahsa。所以，这场抗争的确不是我这一代人的抗争，我们这代人只是跟随着更年轻的一代。</p>
 <blockquote>
 <p>我感觉这次运动的主体是“Tiktok一代”，也就是年轻人和学生群体。#MahsaAmini 的标签在Tiktok上有1亿4500万次的转发，比伊朗的人口数量要大得多。这个标签之所以在Tiktok上传播如此之广要归功于kpop团体BTSboys（防弹少年团）在伊朗的粉丝，他们最知道怎么制造话题，是他们让这个标签在Tiktok上火了起来。</p>
 </blockquote>
