Update VOCUS 2022-09-27 patch

--- a/_posts/2022-09-26-VOCUS-attitude-與-姿勢-姿態-儀態-儀表-相貌-形貌-態勢-態度-儀態出於底心-心態-表態-意見-立場-觀點-等橋接.html
+++ b/_posts/2022-09-26-VOCUS-attitude-與-姿勢-姿態-儀態-儀表-相貌-形貌-態勢-態度-儀態出於底心-心態-表態-意見-立場-觀點-等橋接.html
@@ -26,7 +26,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">attitude = α對twenty點對u倒eye =&nbsp;口對二十點uu倒目&nbsp;=&nbsp;口口十十點un目&nbsp;=&nbsp;口口艹點Ll鳥目&nbsp;=&nbsp;口口艹點乚丿隹目&nbsp;=&nbsp;口口艹點儿隹目&nbsp;=&nbsp;觀點</span>，其中&nbsp;i&nbsp;意會點狀符號而轉換漢字「點」，「u倒」即轉換字母&nbsp;n，「鳥」轉注「隹」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">attitude =&nbsp;眼兜three1土ㄙ點E =&nbsp;目兜三與亅去點ε =&nbsp;目兜手去點3 =&nbsp;目兜龵去點三&nbsp;=&nbsp;看去氵=&nbsp;看法</span>，類似上述的「觀點」或「意見」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">attitude = a.t.t.i.tude =&nbsp;為.敵.對.之.態度&nbsp;=&nbsp;為敵對之態度</span>，類似「有點敵意的態度」或「反對的態度」，據說此義是某種俚語中的含意。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-53g51"><span style="font-weight: bold; ">P.S.1.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">attitudinal：attitude的、attitude樣容</span>，此時可能是來自&nbsp;Latin&nbsp;的&nbsp;attitudine&nbsp;與字根&nbsp;-al (的；樣容)&nbsp;的組合 <span style="font-weight: bold; ">(註：參考&nbsp;P.S.2. Latin：attitudine)；attitude之捏的</span>，此時意思類似「拿捏出來的態度的」<span style="font-weight: bold; ">；attitude逆的、attitude逆樣容</span>，此時就和前述俚語中的含意「為敵對之態度」相關。其中字根<span style="font-weight: bold; ">&nbsp;-al = aall&nbsp;省&nbsp;al = aa.ll = aㄧ.1L = Aㄧ.1ᒣ&nbsp;=&nbsp;白.I𠃌&nbsp;=&nbsp;白.i𠃌&nbsp;=&nbsp;白.冫𠃌&nbsp;=&nbsp;白.丶㇀𠃌&nbsp;=&nbsp;白.丶勹&nbsp;=&nbsp;白.勺&nbsp;=&nbsp;白勺&nbsp;=&nbsp;的</span>，其中「Aㄧ」的上下組合約略象徵漢文「白」的初文。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">attitudinize：attitude之作</span>，此時類似「作出態度」，可能是來自&nbsp;Latin&nbsp;的&nbsp;attitudine&nbsp;與字根&nbsp;-al (的；樣容)&nbsp;的組合<span style="font-weight: bold; ">&nbsp;(註：參考&nbsp;P.S.2. Latin：attitudine)；attitude捏作</span>，類似「捏出態度」，感覺有點像是為了配合某種場面而拿捏出某種態度的意思<span style="font-weight: bold; ">；attitude逆作</span>，此時又類似「作出敵對的態度」，和前述俚語中的含意「為敵對之態度」相關。</div>
@@ -42,12 +41,10 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">apterygial：翅沒有之樣的；翼沒有之樣的；手沒缺腳的</span>，類似「沒手沒腳的」<span style="font-weight: bold; ">；全部都零有肢的</span>，意通「沒肢的」或「無肢的」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">aptotic：反變化之況；反變化樣況；反變化有的；一模單樣的；全部都同樣的；千篇一律。</span>意通「沒有變化的」、「無變化的」、「固定不變的」、「千篇一律的」，其中&nbsp;a&nbsp;有&nbsp;anti (反；反對；反對於；相逆；逆於)&nbsp;之意。此字與前述&nbsp;apt&nbsp;系列的單字關係不大，除非是說&nbsp;aptotic&nbsp;也帶有「安排妥當的」之意，但就是因爲有點類似「只求通過某種標準而打出安全牌」的「安牌妥當的」之涵意，結果導致缺乏新鮮感而表現出某種「單調的」或「無聊的」之感覺。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">APT：Advanced Packaging Tools</span>&nbsp;(<span style="font-weight: bold; ">步進的包裹在一起的工具眾；前進的編組於一起的工具數複；前衛的包裝為組一的工具多；先進的成套的工具众；階進的包打的工具組</span>，漢文或譯「進階打包工具」)&nbsp;的簡縮寫。此字與前述&nbsp;apt&nbsp;系列的單字無關。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-f3uda"><span style="font-weight: bold; ">P.S.2.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Latin：attitudine --&nbsp;姿勢；姿態；儀態；儀表；相貌；形貌；態勢；儀態出由內心；心態；態度；表態；意見；立場；觀點。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Later Latin：aptitudo --&nbsp;</span>意通&nbsp;English&nbsp;的 <span style="font-weight: bold; ">aptitute</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Later Latin：aptitudinem -- aptitudo之受</span>，此字爲上述&nbsp;aptitudo&nbsp;的受格形式。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ZbgFO6Tz3Fw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ZbgFO6Tz3Fw"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/ZbgFO6Tz3Fw" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/ZbgFO6Tz3Fw</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Cattitude | SEE WHAT YOU CAN’T SEE | a7sII】(P.S.&nbsp;這部影片的標題&nbsp;Cattitude&nbsp;一字在字典上很難查到，會不會是「貓的tude」或「貓的attitude」之類的意思呢？……&nbsp;頗爲耐人尋味。)</span></div>
