--- a/_posts/2022-09-25-PQ-韓國產業依賴中國過深-談不了-經濟安全.html
+++ b/_posts/2022-09-25-PQ-韓國產業依賴中國過深-談不了-經濟安全.html
@@ -112,7 +112,7 @@ author: 林貝利
 
 
 
-<p>《韓國經濟產業關鍵材料的現狀與建議》報告雖然也是有大媒體提到，但反倒是網路媒體《HeadlineNewsi》更為關注。然而，韓國各大媒體之所以不特別指出「中國風險」，難道背後有什麼理由？</p>
+<p>《韓國經濟產業關鍵材料的現狀與建議》報告雖然也是有大媒體提到，但反倒是網路媒體《HeadlineNews》更為關注。然而，韓國各大媒體之所以不特別指出「中國風險」，難道背後有什麼理由？</p>
 
 
 
@@ -144,11 +144,11 @@ author: 林貝利
 
 
 
-<p>尹錫悅政府在今（2022）年 5 月就職演說與就職100天重申：只要北韓願意停止發展核武、進行去核化，韓國願分階段提供北韓經濟援助。韓國對北韓經濟援助帶有條件甚至要脅，讓北韓覺得荒謬透頂，也因此，韓國與北韓關係有惡化的危機。</p>
+<p>尹錫悅政府在今（2022）年 5 月就職演說與就職 100 天重申：只要北韓願意停止發展核武、進行去核化，韓國願分階段提供北韓經濟援助。韓國對北韓經濟援助帶有條件甚至要脅，讓北韓覺得荒謬透頂，也因此，韓國與北韓關係有惡化的危機。</p>
 
 
 
-<p>不管未來韓國要與北韓是友好還是交惡，只是，現階段，尹錫悅政府領導下的韓國，應該還有其他的事情要做吧 ─ 如「中國風險」？</p>
+<p>不管未來韓國要與北韓是友好還是交惡，只是，現階段，尹錫悅政府領導下的韓國，應該還有其他的事情要做吧——比如說「中國風險」？</p>
 
 
 
