--- a/_posts/2022-09-25-PQ-聯合國大會各國大談俄侵烏-波蘭總理指西方面對全球戰端是雙重標準.html
+++ b/_posts/2022-09-25-PQ-聯合國大會各國大談俄侵烏-波蘭總理指西方面對全球戰端是雙重標準.html
@@ -12,7 +12,7 @@ author: 王雪俐
 
 
 
-<p>然而西方國家與俄羅斯競爭外交影響力的同時，也意識到許多國家對此抱持不同看法，所謂的<strong>南方國家</strong>（<strong>Global South，發展中國家</strong>）尤其擔心在激烈的地緣政治中受到擠壓並付出慘重代價。例如非洲國家特別擔心西方與俄羅斯的競爭會影響非洲大陸的糧食安全、國際援助、投資、貿易及醫療健康等各方面，拉丁美洲國家則擔心商品出口成問題。</p>
+<p>然而西方國家與俄羅斯競爭外交影響力的同時，也意識到許多國家對此抱持不同看法，所謂的<strong>南方世界（Global South，發展中國家）</strong>尤其擔心在激烈的地緣政治中受到擠壓並付出慘重代價。例如非洲國家特別擔心西方與俄羅斯的競爭會影響非洲大陸的糧食安全、國際援助、投資、貿易及醫療健康等各方面，拉丁美洲國家則擔心商品出口成問題。</p>
 
 
 
@@ -32,11 +32,11 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-1024x650.jpg" alt="" class="wp-image-50925" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-1024x650.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-300x190.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-768x487.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>上萬名洛興雅難民聚集在孟加拉渥奇亞鄉（Ukhiya）的難民營，生存條件嚴苛，但對洛興雅人來說至少不像回到緬甸家鄉而被屠殺。但孟加拉政府過去數度用各種方式希望能遣返洛興雅難民。<br>圖／Syed Zakir Hossain/Dhaka Tribune</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-1024x650.jpg" alt="" class="wp-image-50925" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-1024x650.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-300x190.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960-768x487.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/5889c754-whatsapp-image-2019-08-25-at-11-57-1566714292960.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>上萬名洛興雅難民聚集在孟加拉渥奇亞鄉（Ukhiya）的難民營，生存條件嚴苛，但對洛興雅人來說至少不像回到緬甸家鄉而被屠殺。但孟加拉政府過去數度用各種方式希望能遣返洛興雅難民。<br>圖／Syed Zakir Hossain/Dhaka Tribune</figcaption></figure>
 
 
 
-<p>還有一些國家指責西方國家面對烏克蘭和面對其他地區的衝突，抱持明顯的雙重標準，波蘭總理杜達（Andrzej Duda）對此有正面反應。他在聯合國大會演說時表示，他要向「富裕的北方世領袖」，或者這些人通常號稱的「西方領袖」說「幾句真心話」。他認為西方國家面對敘利亞、利比亞、葉門等地的悲劇，並不如面對烏克蘭戰爭那般堅定，西方國家譴責俄羅斯入侵烏克蘭，但對於「試圖動搖<strong>沙赫爾</strong>地區穩定並威脅多國的傭兵問題」並未同等重視。</p>
+<p>還有一些國家指責西方國家面對烏克蘭和面對其他地區的衝突，抱持明顯的雙重標準，波蘭總理杜達（Andrzej Duda）對此有正面反應。他在聯合國大會演說時表示，他要向「富裕的北方世界領袖」，或者這些人通常號稱的「西方領袖」說「幾句真心話」。他認為西方國家面對敘利亞、利比亞、葉門等地的悲劇，並不如面對烏克蘭戰爭那般堅定，西方國家譴責俄羅斯入侵烏克蘭，但對於「試圖動搖<strong>沙赫爾</strong>地區穩定並威脅多國的傭兵問題」並未同等重視。</p>
 
 
 
