--- a/_posts/2022-09-26-INITIUM-早报-俄罗斯校园枪击案死亡人数升至17人-枪手是该校旧生.html
+++ b/_posts/2022-09-26-INITIUM-早报-俄罗斯校园枪击案死亡人数升至17人-枪手是该校旧生.html
@@ -28,8 +28,8 @@ author:
 <p>2020年9月美国上诉法院裁定“棱镜计划”非法，不过斯诺登并未得到赦免。</p>
 <p>2020年11月，<a href="https://www.theguardian.com/us-news/2020/nov/02/edward-snowden-applies-for-russian-citizenship-for-sake-of-future-son">斯诺登决定申请加入俄罗斯国籍</a>。因为他的妻子米尔丝（Lindsay Mills）即将分娩，他不希望与儿子分离，且正值疫情导致多国关闭边境，于是他与妻子决定申请入籍俄罗斯。</p>
 <p>根据俄罗斯法例，斯诺登可以持有美俄双重国籍。</p>
-<h3>俄罗斯驱逐日本驻海参威外交官</h3>
-<p><a href="https://tass.com/politics/1513715">俄罗斯塔斯社报导指</a>，俄外交部宣布驱逐日本驻海参威领事馆一名外交官，指其窃取俄罗斯机密信息，限期48小时内离境。</p>
+<h3>俄罗斯驱逐日本驻海参崴外交官</h3>
+<p><a href="https://tass.com/politics/1513715">俄罗斯塔斯社报导指</a>，俄外交部宣布驱逐日本驻海参崴领事馆一名外交官，指其窃取俄罗斯机密信息，限期48小时内离境。</p>
 <p>俄罗斯联邦安全局（FSB）称，该名日本外交官在购买涉俄机密信息时被抓，相关信息包括俄罗斯与某个亚太国家的目前合作领域，以及西方制裁政策对俄罗斯滨海边疆区造成的经济影响。</p>
 <p>俄罗斯外交部周一召唤日本驻莫斯科大使馆一名参赞通报此事，并向日本方面提出强烈抗议。</p>
 <h3>加拿大10月1日起取消入境疫苗要求</h3>
