--- a/_posts/2022-09-26-INITIUM-谢达文-中国认同在台湾还有市场吗-都是-台独教育-惹的祸.html
+++ b/_posts/2022-09-26-INITIUM-谢达文-中国认同在台湾还有市场吗-都是-台独教育-惹的祸.html
@@ -10,7 +10,7 @@ author: 谢达文
 
 <p>「中国认同在台湾，真的还有市场吗？如果有，是谁还抱持中国认同？」</p><p>谢达文</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220927-opinion-taiwans-national-identity/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/1e788b9cf8f94e9cac9bdf5b27361bf8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2016年5月14日，台北，一个台独组织的成员手持旗帜站在一群亲中国支持者内。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2016年5月14日，台北，一个台独组织的成员手持旗帜站在一群亲中国支持者内。<span class="credit">摄：Tyrone Siu/Reuters/达志影像</span></figcaption></figure><p><strong>（谢达文，国立台湾大学社会学研究所博士候选人）</strong></p>
-<p>日前，台湾艺人杨丞琳在中国综艺节目，宣称自己虽然长在台北，但<a href="https://www.facebook.com/theinitium/posts/pfbid02B9SY3MDJDLgwBtc8JPFZ1Zy8tikBit99ex3Qzt4t8JPn2JAmqhTKXzWoivcKBPrtl">自认是“广东人”</a>，引起网路议论；更长期来说，中华人民共和国政府，对于台湾也宣称是血浓于水，同属一个民族；许多读者可能也知道，早期台湾在中国国民党统治下，长年实行“爱国教育”，教育人们要成为“堂堂正正的中国人”，但这也已经是数十年前的事了，因此也让人好奇，这对近代台湾是否还有残余的影响？<br><br>而这些当今现象与历史发展，都共同指向一个重要的问题：中国认同在台湾，真的还有市场吗？如果有，是谁还抱持中国认同？此外，这20年以来，中国认同在台湾经历了怎样的变化，是持平、成长还是萎缩？变化趋势有没有族群跟世代的差异？<br><br>在这篇文章中，我利用台湾中央研究院社会学研究所实际的调查资料，进行统计分析，发现了以下三个重要的现象：</p>
+<p>日前，台湾艺人杨丞琳在中国综艺节目，宣称自己虽然长在台北，但<a href="https://www.facebook.com/theinitium/posts/pfbid02B9SY3MDJDLgwBtc8JPFZ1Zy8tikBit99ex3Qzt4t8JPn2JAmqhTKXzWoivcKBPrtl">自认是“广东人”</a>，引起网路议论；更长期来说，中华人民共和国政府，对于台湾也宣称是血浓于水，同属一个民族；许多读者可能也知道，早期台湾在中国国民党统治下，长年实行“爱国教育”，教育人们要成为“堂堂正正的中国人”，但这也已经是数十年前的事了，因此也让人好奇，这对近代台湾是否还有残余的影响？<br><br>而这些当今现象与历史发展，都共同指向一个重要的问题：中国认同在台湾，真的还有市场吗？如果有，是谁还抱持中国认同？此外，这20年以来，中国认同在台湾经历了怎样的变化，是持平、成长还是萎缩？变化趋势有没有族群跟世代的差异？<br><br>我利用台湾中央研究院社会学研究所实际的调查资料，进行统计分析，发现了以下三个重要的现象：</p>
 <ol>
 <li>
 <p>在今日的台湾，中国认同非常小众，人数只有两成出头，其中，“第一、二代外省人”更有可能抱持中国认同（外省人指“战后从中国迁徙来台湾”的移民及其后代，约占台湾人口一成）；</p>
@@ -29,5 +29,5 @@ author: 谢达文
 <blockquote>
 <p>虽然中国方面可能希望台湾艺人、商人，能多表达对“祖国”的认同，但这在今日的台湾，其实是一个非常小众的认同──换言之，即使杨丞琳等人是真心认同中国，也不代表台湾真实的现象。</p>
 </blockquote>
-<p>在这篇文章中，我使用的是台湾中研院2000、2010、2020三个年度的调查（调查对象为台湾社会18岁以上的民众），在这些调查中，都问了人们同一个问题：“下面有好几种对自己的称呼，请问您觉得哪一项对您最适合？”，选项包含：“我是台湾人”、“我是中国人”、“我是台湾人也是中国人”、“我是中国人也是台湾人”以及“其他”。<br><br>在这篇文章的分析中，只有第一个选项（纯粹的台湾认同）视为没有中国认同，另外三个选项，因为有自认为中国人，所以都算做有中国认同。（至于回答“其他”，比如说自己是“地球人”或“亚洲人”，则被排除在这次的分析之外。）<br><br>先从最近的2020年度调查结果来看。首先，我们发现，抱持中国认同的比率，只有22.14%，在社会中属于少数，是一个“小众”的认同。<br><br>而这个“小众”的面貌是什么呢？换言之，是什么样的人会抱持中国认同？</p>
+<p>在这篇文章中，我使用的是台湾中研院2000、2010、2020三个年度的调查（调查对象为台湾社会18岁以上的民众），在这些调查中，都问了人们同一个问题：“下面有好几种对自己的称呼，请问您觉得哪一项对您最适合？”，选项包含：“我是台湾人”、“我是中国人”、“我是台湾人也是中国人”、“我是中国人也是台湾人”以及“其他”。<br><br>在本文的分析中，只有第一个选项（纯粹的台湾认同）视为没有中国认同，另外三个选项，因为有自认为中国人，所以都算做有中国认同。（至于回答“其他”，比如说自己是“地球人”或“亚洲人”，则被排除在这次的分析之外。）<br><br>先从最近的2020年度调查结果来看。首先，我们发现，抱持中国认同的比率，只有22.14%，在社会中属于少数，是一个“小众”的认同。<br><br>而这个“小众”的面貌是什么呢？换言之，是什么样的人会抱持中国认同？</p>
 <p>我们将族群背景和出生世代放入分析后发现（技术性方法详附注）如下图所示，中国认同基本上集中于所谓的第一和第二代外省人，也就是第一批随中国国民党撤退来台的移民，以及他们的儿女。</p>
