Update VOCUS 2022-09-28 patch

--- a/_posts/2022-09-27-VOCUS-查德與傑提-聊很深-抗爭我的小事.html
+++ b/_posts/2022-09-27-VOCUS-查德與傑提-聊很深-抗爭我的小事.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/647603ed-0c33-4d27-aef6-04d59c90e1a6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">一部分是這些議題或是裡面人物的行徑，真的很讓觀眾傻眼和無理由，甚至還會為了更無聊的事情而意見不合，我覺得會受到美國許多觀眾給出高分的喜愛，感覺一部份是這種胡鬧的情境喜劇演出，讓很多觀眾容易接受，再來是裡面探討的議題看似亂七八糟，但仔細想現實中我們就是很常為自己有些別人想不透的事情而堅持。</div>
 <div class="draft-block draft--p left">儀式感和自我底線的堅持很重要，但同時事情過了頭就會變得有點滑稽跟愚蠢，《查德與傑提：聊很深》用莫名其妙的議題、荒腔走板的處理方式、和略帶真實感的情境秀，達到諷刺的幽默和讓人可以享受的喜劇。這點比起硬要塞入一些不合時宜的老梗情境劇要高明的多，同時也讓更多人在輕鬆之餘更理解其中的喜劇哲學。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/SV5eLsh0DGc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/SV5eLsh0DGc"></iframe></div>
