--- a/_posts/2022-09-27-PQ-日本今舉行安倍國葬儀式-岸田文雄與賀錦麗共同譴責中國在台海挑釁.html
+++ b/_posts/2022-09-27-PQ-日本今舉行安倍國葬儀式-岸田文雄與賀錦麗共同譴責中國在台海挑釁.html
@@ -16,7 +16,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957.jpg" alt="" class="wp-image-115663" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>已故日本前首相安倍晉三 7 月 8 日在奈良市進行街頭輔選演說時，遭槍手持改造槍枝槍擊身亡，首相岸田文雄內閣決定今天下午為安倍舉辦國葬／圖：共同社。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957.jpg" alt="" class="wp-image-115663" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/81b376ad-2000x1333_wmkn_0666614088957-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>已故日本前首相安倍晉三 7 月 8 日在奈良市進行街頭輔選演說時，遭槍手持改造槍枝槍擊身亡，首相岸田文雄內閣決定今天下午為安倍舉辦國葬／圖：共同社。</figcaption></figure></div>
 
 
 
