--- a/_posts/2022-09-27-INMEDIA-大狀王-巔峰水準的音樂劇.html
+++ b/_posts/2022-09-27-INMEDIA-大狀王-巔峰水準的音樂劇.html
@@ -22,4 +22,5 @@ author: 何俊輝
 <p>《申冤》、《終審》等戲份皆有很多群眾演員在台上，台上不是主要角色唱歌、講台詞而其他角色總呆站聆聽那麼呆板，林俊浩為主角、配角和群眾演員都編排了一些能增強視覺效果的舞蹈，但舞蹈是適可而止，不會搶掉戲劇效果的演繹及戲味的流露。導演方俊杰於演員走位及場面調度上有非常好的處理，公堂戲見人物多但沒有眼花撩亂之感，相反配角和群眾演員能有效、有層次地為台上的焦點角色增添戲劇處境上的張力。</p>
 <p>群戲大場面外，《大》劇有三場戲是安排女主角秀秀及男主角阿細、方唐鏡一人獨演一場戲，秀秀唱的《懸崖》、阿細唱的《撒一場白米》（有加插和唱）、方唐鏡唱的《道德經》都不像公堂戲的歌曲般要交代繁複的劇情，而是像普遍音樂劇歌曲般重點抒發角色內心那難以言說的感受，三位演員確能透過真摯及用盡心力演繹的歌聲，將角色的心路歷程和思緒狀態唱得感人至深。</p>
 <p>縱使 《大狀王》有很多悲情、可怕及角色陷入困局的戲份(孫詠君以浮誇的服裝造型設計，把怪責阿細停做壞事的大魔頭呈現得十分可怕)，然而一段涉及「怎樣處理本是清水的墨水？」的對白，以及一段秀秀盼「一個好人做好事，會令更多人做好多好事」的話，都見編劇深信世人祇要多點睿智、好心，世間總會有希望。</p>
+<p><em>（本網歡迎各界投稿，文章內容為作者個人意見，並不代表本網立場。）</em></p>
 </div></div></div>
