--- a/_posts/2022-09-27-INMEDIA-金馬獎-多部港產片獲提名-未在港公映-憂鬱之島-入圍最佳紀錄片.html
+++ b/_posts/2022-09-27-INMEDIA-金馬獎-多部港產片獲提名-未在港公映-憂鬱之島-入圍最佳紀錄片.html
@@ -19,6 +19,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/gq3fH9N5M1" title="100928290_137268914624599_3393978028831801344_n"><img src="https://live.staticflickr.com/65535/52388200111_591afa626b_b.jpg" alt="100928290_137268914624599_3393978028831801344_n" /></a><br /><em>《憂鬱之島》劇照</em></p>
 <p><strong>曾在多個影展奪獎 《憂鬱之島》入圍最佳紀錄片</strong></p>
 <p>至於入圍最佳紀錄片的《憂鬱之島》，早前已在加拿大國際紀錄片影展和<a href="https://www.inmediahk.net/node/%E6%96%87%E8%97%9D/%E7%B4%80%E9%8C%84%E5%8F%8D%E9%80%81%E4%B8%AD%E8%88%87%E7%A7%BB%E6%B0%91%E6%BD%AE-%E5%85%A9%E9%A6%99%E6%B8%AF%E5%B0%8E%E6%BC%94%E4%BD%9C%E5%93%81%E5%85%A5%E5%9C%8D%E5%8F%B0%E7%81%A3%E5%9C%8B%E9%9A%9B%E7%B4%80%E9%8C%84%E7%89%87%E5%BD%B1%E5%B1%95">台灣國際紀錄片影展</a>奪得多個獎項，並取得資格角逐奧斯卡。<a href="https://www.inmediahk.net/node/1074428">導演陳梓桓</a>曾執導雨傘運動紀錄片《亂世備忘》，而<a href="https://www.inmediahk.net/node/1074507">《憂》的監製</a>任硯聰及蔡廉明，分別曾監製《地厚天高》和《十年》。《憂鬱之島》已先後在台灣、英國、美國、澳洲等多個地方上映，但在香港未有映期。</p>
+<p>另外，麥海珊監製的《黑牆》入圍最佳紀錄短片，並將在今屆金馬獎首映。</p>
 <p>香港影業協會早前去信會員，指金馬獎近年日趨政治化，多名台灣導演或藝人將政治與電影「混為一談」，籲會員參與頒獎禮前「務必三思」 。影協理事長洪祖星表示，香港電影台前幕後、演員、導演和投資公司主要目標都是大陸市場，不希望因此影響與內地合作：「唔想萬一有咩影響，影響到我哋喺大陸嘅發展。」</p>
 <p><a href="https://www.goldenhorse.org.tw/awards/nw/">按此閱覽</a>完整得獎名單</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
