--- a/_posts/2022-09-27-PQ-執意玩火-美國參議院要求情報總監審查蘋果跟長江存儲的供應鏈關係.html
+++ b/_posts/2022-09-27-PQ-執意玩火-美國參議院要求情報總監審查蘋果跟長江存儲的供應鏈關係.html
@@ -20,6 +20,10 @@ author: 艾格姆
 
 
 
+<p>目前韓國是世界的記憶體大國，三星和海力士全球市占率約七成。另外，美國美光記憶體的市占率約為二成。</p>
+
+
+
 <p class="pqnote">蘋果在早些時候的聲明表示，目前旗下產品均未使用長江存儲的記憶體，但正在評估是否將長江存儲的記憶體用於只在中國銷售的 iPhone。它還表示，儲存在此類晶片上的所有用戶數據都是「完全加密的」。蘋果重申，不打算在中國以外的市場銷售使用長江存儲記憶體的 iPhone。一位不願透露姓名的參議院助理說，議員擔心這些手機仍會流入全球市場。</p>
 
 
