--- a/_posts/2022-09-28-INMEDIA-羊村繪本案-兩名被告就定罪提上訴.html
+++ b/_posts/2022-09-28-INMEDIA-羊村繪本案-兩名被告就定罪提上訴.html
@@ -9,6 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_335.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>已被撤銷登記的香港言語治療師總工會5名理事，被指發布羊村系列繪本，經審訊後被裁定一項「串謀刊印、發布、分發、展示或複製煽動刊物」罪成，判監19個月，料10月便可獲釋。法庭文件顯示，主席黎雯齡和司庫陳源森已於9月16日就定罪提出上訴，尚待排期，二人均沒有法律代表。</p>
+<p>律政司回覆《獨媒》查詢表示，已收到被告黎雯齡及陳源森提出不服定罪上訴許可申請，律政司會研究法官的判刑理據和其他相關資料，然後決定是否需要跟進。</p>
 <p>羊村案5名被告為：言語治療師總工會主席黎雯齡（26歲）、工會外務副主席楊逸意（28歲）、工會秘書伍巧怡（29歲）、工會司庫陳源森（26歲）及工會委員方梓皓（27歲），5人於9月7日被裁定一項「串謀刊印、發布、分發、展示或複製煽動刊物」罪成，並於9月10日被判監19個月。</p>
 <p>國安法指定法官郭偉健表示，涉案繪本具煽動意圖，明顯引導兒童憎恨中央和特區政府，荼毒他們相信香港並非中國一部分，播下社會不穩的種子；又指2019年成千上萬港人參與涉「極端暴力」的暴亂，政府以煽動罪限制言論及出版自由「實屬必要」，又形容散播謠言和憎恨是比煽動暴力更有效推翻政府的武器。</p>
 <p>控罪指，5人於2020年6月4日至2021年7月22日期間（包括首尾兩日）在香港，一同串謀黃凱晴及其他人刊印、發布、分發、展示及／或複製煽動刊物，包括3本名為《羊村守衛者》、《羊村十二勇士》及《羊村清道夫》的書，意圖包括：</p>
