--- a/_posts/2022-09-30-INMEDIA-被指8.11太古站非法集結-兩男罪成還柙-一男因辨認證供矛盾罪脫.html
+++ b/_posts/2022-09-30-INMEDIA-被指8.11太古站非法集結-兩男罪成還柙-一男因辨認證供矛盾罪脫.html
@@ -17,6 +17,5 @@ author: 獨媒報導
 <p>不過，梁官同時指，負責拘捕的警員庭上表明未能辨認孟，當日沒有仔細觀察其衣著；而負責透過片段辨認的警員亦指被告頭戴黑色頭盔，與當日撿取的黃色頭盔不符，故此孟有否戴頭盔成疑。基於辨認證供上的矛盾，梁官裁定孟罪名不成立。</p>
 <p>3名被告依次為謝天豪（24歲）、理髮師何恩傑（21歲）及學生孟子鋒（22歲），他們被指於2019年8月11日在西灣河康山道近港鐵太古站C出口，和另一些人參與非法集結。</p>
 <p>案件編號：ESCC1789/2021 </p>
-<p>相關報導：<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/811%E5%A4%AA%E5%8F%A4%E7%AB%99%E4%BA%8B%E9%9A%942%E5%B9%B4-5%E4%BA%BA%E9%81%AD%E6%8E%A7%E9%9D%9E%E6%B3%95%E9%9B%86%E7%B5%90%E7%BD%AA-%E5%87%86%E4%BF%9D%E9%87%8B%E5%80%99%E8%A8%8A">8.11太古站事隔2年 5人遭控非法集結罪 准保釋候訊</a></p>
-<p><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E4%BA%8B%E9%9A%94%E5%85%A9%E5%B9%B4%E8%A2%AB%E6%8E%A7%E9%9D%9E%E6%B3%95%E9%9B%86%E7%B5%90-%E7%90%86%E5%A4%A7%E7%94%9F%E7%94%B3%E4%B8%8B%E5%B9%B4%E9%96%8B%E5%AF%A9%E5%BE%85%E5%AE%8C%E6%88%90%E5%AD%B8%E4%BD%8D-%E5%AE%98%E4%B8%80%E5%BA%A6%E6%8B%92%E7%B5%95">事隔兩年被控非法集結 理大生申下年開審待完成學位 官一度拒絕</a></p>
+<p>相關報導：<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/811%E5%A4%AA%E5%8F%A4%E7%AB%99%E4%BA%8B%E9%9A%942%E5%B9%B4-5%E4%BA%BA%E9%81%AD%E6%8E%A7%E9%9D%9E%E6%B3%95%E9%9B%86%E7%B5%90%E7%BD%AA-%E5%87%86%E4%BF%9D%E9%87%8B%E5%80%99%E8%A8%8A">8.11太古站事隔2年 5人遭控非法集結罪 准保釋候訊</a><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E4%BA%8B%E9%9A%94%E5%85%A9%E5%B9%B4%E8%A2%AB%E6%8E%A7%E9%9D%9E%E6%B3%95%E9%9B%86%E7%B5%90-%E7%90%86%E5%A4%A7%E7%94%9F%E7%94%B3%E4%B8%8B%E5%B9%B4%E9%96%8B%E5%AF%A9%E5%BE%85%E5%AE%8C%E6%88%90%E5%AD%B8%E4%BD%8D-%E5%AE%98%E4%B8%80%E5%BA%A6%E6%8B%92%E7%B5%95">事隔兩年被控非法集結 理大生申下年開審待完成學位 官一度拒絕</a></p>
 </div></div></div>
