--- a/_posts/2022-09-30-INMEDIA-調查指一半少數族裔外賣員曾遭歧視-有人被辱-病毒-污糟.html
+++ b/_posts/2022-09-30-INMEDIA-調查指一半少數族裔外賣員曾遭歧視-有人被辱-病毒-污糟.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/2022093001.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>疫情期間，港人減少外出用餐，叫外賣次數增多，與外賣員磨擦增加，部分少數族裔外賣更遭受歧視。嶺大學者與天主教香港教區的教區勞工牧民中心調查發現，約一半受訪少數族裔外賣員在工作期間遭受歧視，有人不願與他們乘搭同一部升降機，有人甚至被謾罵「病毒」和「污糟」。</p>
+<img src="https://www.inmediahk.net/files/column_images/2022093001.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>疫情期間，港人減少外出用餐，叫外賣次數增多，與外賣員磨擦增加，部分少數族裔外賣員更遭受歧視。嶺大學者與天主教香港教區的教區勞工牧民中心調查發現，約一半受訪少數族裔外賣員在工作期間遭受歧視，有人不願與他們乘搭同一部升降機，有人甚至被謾罵「病毒」和「污糟」。</p>
 <p>調查由嶺南大學文化研究系副教授梁旭明與天主教香港教區的教區勞工牧民中心進行，調查關注外賣員的工作安全及滿足感。調查於2022年3月至5月，共收集106份華裔及非華裔外賣送遞員的問卷，並與37名少數族裔人士訪談。</p>
 <p><strong>一半人遭受身體語言及謾罵<strong></strong></strong></p>
 <p>當中有51.2% 受訪者為Foodpanda外賣員、33.4%為Deliveroo ，以及4.2%為其他公司。調查發現，有約一半受訪的少數族裔外賣員在工作期間遭受歧視，包括遭受身體語言及謾罵等。梁旭明指，由於少數族裔外賣員的工作環境涉及不同持份者，如餐廳職員、屋苑保安及顧客等，他們遭受歧視的情況比其他工種嚴重，特別在疫情爆期間，情況更為明顯。</p>
@@ -33,5 +33,5 @@ author: 獨媒報導
 <p>另外，她促外賣平台改善應用程式，簡化工資計算方法、增設翻譯功能、改善申訴機制。</p>
 <p>《獨媒》就外賣員的意見向Foodpanda 及Deliveroo 查詢，截稿前未有回覆。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1089Te73Hi" title="天主教香港教區勞工牧民中心-九龍程序幹事李嘉詠"><img src="https://live.staticflickr.com/65535/52394290016_72bb4bcba3_b.jpg" alt="天主教香港教區勞工牧民中心-九龍程序幹事李嘉詠" /></a><br /><em>天主教香港教區勞工牧民中心（九龍）程序幹事李嘉詠<em></em></em></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9907d4Tn6k" title="無標題"><img src="https://live.staticflickr.com/65535/52394589974_de26fd2a37_b.jpg" alt="無標題" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8t2gCD6cK1" title="無標題"><img src="https://live.staticflickr.com/65535/52394799968_afb0d2a80d_b.jpg" width="1024" alt="無標題" /></a></p>
 </div></div></div>
