Update VOCUS 2022-10-03 patch

--- a/_posts/2022-10-02-VOCUS-venkatanarasimharajuvaripeta-會唸的請舉手.html
+++ b/_posts/2022-10-02-VOCUS-venkatanarasimharajuvaripeta-會唸的請舉手.html
@@ -38,11 +38,5 @@ author: 鱸魚
 <div class="draft-block draft--p left">（所有圖片來源：鱸魚）</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">最後，如果你想聽聽這些荒唐的火車站要怎麼唸，讓你娛樂一下。聽一遍就會唸的話請舉手。 </div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/BIbBhNEByE8"></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Pl-id4fdyro"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/BIbBhNEByE8"></iframe></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Pl-id4fdyro"></iframe></div>
