--- a/_posts/2022-10-02-VOCUS-栞與紙魚子-女高中生的怪奇物語.html
+++ b/_posts/2022-10-02-VOCUS-栞與紙魚子-女高中生的怪奇物語.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/8684afe3-c75b-4567-8739-ce9c49e6910d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">喜歡恐怖、奇幻、搞笑融合一起，並且熱愛非主流的漫畫迷，我個人是滿推薦可以看看諸星大二郎《栞與紙魚子》和其他比較科幻或沉重感的主題，例如：《妖怪獵人》系列和《暗黒神話》、《生物都市》等，不過可能會跟《栞與紙魚子》的風格有很大的差距，並且是比較正統的諸星大二郎風格。</div>
 <div class="draft-block draft--p left">有時我會覺得台灣雖然那麼喜歡怪談和恐怖故事，但是只有滿足恐怖的單一元素其實對於愛好者久而常常會生膩，以我一個喜好恐怖故事的觀眾與讀者來說，諸星大二郎中對於恐怖故事那不按牌理出牌甚至搞笑、詭異的劇情，是我可以看下去，覺得有意思的地方，即便已經多年過去，這些單篇漫畫橋段現在看來依舊可以享受另類的恐怖感覺。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/52AhBkdXFcs"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/52AhBkdXFcs"></iframe></div>
