--- a/_posts/2022-10-03-INMEDIA-何栢良促取消限聚令-指沒有科學根據及實際需要.html
+++ b/_posts/2022-10-03-INMEDIA-何栢良促取消限聚令-指沒有科學根據及實際需要.html
@@ -20,7 +20,7 @@ author: 獨媒報導
 <p><strong> 多項活動逾4人  梁栢賢質疑限聚令不合常理</strong> </p>
 <p>醫管局前行政總裁梁栢賢，亦在Facebook 質疑維持4人限聚令的合理性。他不點名回應行政會議成員、前食物及衞生局長高永文稱限聚令是「一個較為廣泛的防疫措施」涉及不同場合及活動，較遲放寬是可接受的言論。梁栢賢反駁所謂的不同場合及活動「所指什麼場合？什麼活動？」他提到「飲宴、打波、健身、飲酒、唱K等活動和場合，都可以超過4人」，而「平日搭地鐵、巴士等公共交通，一定都會超過4人」。</p>
 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fleungpakyin%2Fposts%2Fpfbid0FNqw4xsky1qu3aPDVZUUka7jHmLqeC15rcfebBv2RrrS24VUXVnJrArZNoqG97yJl&amp;show_text=true&amp;width=500" width="500" height="291" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe><p>
-梁栢賢續質疑，既然上述活動可以多於4人，那為何和朋友家人戴口罩同行，卻不可以超過4人，認為從防疫角度而言「不合常理和邏輯」，認為應盡快調整或絡予更有力的理據。</p>
+梁栢賢續質疑，既然上述活動可以多於4人，那為何和朋友家人戴口罩同行，卻不可以超過4人，認為從防疫角度而言「不合常理和邏輯」，認為應盡快調整或給予更有力的理據。</p>
 <p><strong> 2020年7月至今  限聚令未曾放寬多於4人</strong> </p>
 <p>公眾地方群組聚集的的限聚令（第599G章《預防及控制疾病（禁止羣組聚集）規例》），是於2020年3月28日訂立，當時設定的人數為4人。訂立後曾兩度放寬至8人及50人，惟自2020年7月15日收緊至4人，2021年及2022年曾兩次收緊至2人後放寬回4人外，再未有進一步提升限聚人數。意味至今逾2年，「限聚令」人數從未超過4人。</p>
 <p>2022年4月21日行政長官會見行政會議通過修訂《預防及控制疾病（禁止聚集）規例》（第599G章），賦權食物及衞生局（食衞局）局長可指明在公眾地方進行聚集的人數上限。</p>
