--- a/_posts/2022-10-05-INITIUM-早报-普京签字吞并乌克兰四地区-俄军在乌东部-南部节节败退.html
+++ b/_posts/2022-10-05-INITIUM-早报-普京签字吞并乌克兰四地区-俄军在乌东部-南部节节败退.html
@@ -23,7 +23,7 @@ author:
 <p>预计油价上涨会对美国中期选举民主党选情造成影响。美国白宫表示，拜登总统将评估是否进一步释放战略石油储备，以控制美国油价。</p>
 <p>白宫还称，全球经济正在面对俄罗斯入侵乌克兰带来的持续负面影响，拜登“对OPEC+目光短浅的减产决定感到失望”。</p>
 <p>拜登今年7月曾亲自访问沙特，但未能在能源方面获得坚定的合作承诺。沙特也没有谴责俄罗斯对乌克兰的入侵，导致美国和沙特关系进一步紧张。</p>
-<h3>台湾指大陆侵入领海领空均算“第一击”，越过“红线”必遭反制</h3>
+<h3>台湾指中国大陆侵入领海领空均算“第一击”，越过“红线”必遭反制</h3>
 <p><a href="https://www.cna.com.tw/news/aipl/202210050049.aspx">中央社报导</a>，台湾国防部长邱国正昨日在立法院外交及国防委员会接受质询时表示，由于中共破坏海峡中线默契，台湾将调整“第一击”概念，侵入台湾领空、领海均算“第一击”，跨过台湾“红线”（底线）必遭反制。</p>
 <p>邱国正称，海峡中线原是两岸在法律规定以外的一条默契线，但中共方面主动改变现状，包括8月初在台湾周边海域军演，以及中国军机频频逾越海峡中线，使得海峡中线的默契销毁，因此台湾方面也将调整“第一击”的概念。</p>
 <p>邱国正表示，除了对方开枪开炮，对方飞机、舰船进入台湾领空、领海，以及对方<a href="https://tw.news.yahoo.com/%E5%8F%8D%E5%88%B6%E5%8E%9F%E5%89%87%E9%87%8D%E8%A8%82-%E9%82%B1%E5%9C%8B%E6%AD%A3-%E5%AF%A6%E9%AB%94%E8%88%AA%E7%A9%BA%E5%99%A8-%E7%AE%97%E7%AC%AC-%E6%93%8A-121655731.html">实体航空器</a>飞越海峡，均算作“第一击”。</p>
