--- a/_posts/2022-10-06-VOCUS-漫談保守主義-保有過去美好之物-秩序-4.html
+++ b/_posts/2022-10-06-VOCUS-漫談保守主義-保有過去美好之物-秩序-4.html
@@ -46,7 +46,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">不想累積，只想揮霍成果，這不是什麼開拓者，就只是敗家子而已。</div>
 <div class="draft-block draft--p left">以上就是保守主義，對於失序的危機感，以及為何對新的價值，先保持疑慮再說的理由。把這種疑慮當成反對進步的證明，恰好說明台灣有不少人，對保守主義的誤解極深，或者可以說，是受到特定想要拆解既有秩序的人影響。</div>
 <div class="draft-block draft--p left">別忘了，失序中總會有人可以從中獲得龐大的利益，就如同太陽爆炸時散發出的能量無比巨大，只要獲取一點就非常多，但這個星系也不能住人了。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/fCV8GjFdxm8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/fCV8GjFdxm8"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-4uvfv">「審慎評估」是保守主義的主要態度</h3>
 <div class="draft-block draft--p left">所謂保守主義的秩序觀，大體上是如此。</div>
 <div class="draft-block draft--p left">並不是要求守舊不變，而是既有的路徑走得很順，那沒有道理無緣無故改掉，除非有替代路線，或是找到更好的道路。</div>
@@ -60,4 +60,3 @@ author: 王立第二戰研所
   <li class="draft-block draft--li"><span style="font-weight: bold; ">宅編心得：</span>這系列讓我不得不想起《革命將至》這本書，而其中內容正如這篇提到的「只有極為概略性敘述的意識形態」，但卻極端熱情的呼籲所有人一起進入拒絕工作、無政府、反資本主義……的荒野，只要有足夠多的人加入，在那兒組織公社，就可以建立全新的文明。總之就是讓千千萬萬人去踩出一條路啊，怕。</li>
 </ul>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/8e882bad-35ce-4b3e-b056-3f6d715410aa.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
