--- a/_posts/2022-10-07-INITIUM-2022意大利右翼政府上台-民粹其实在落潮-选民期待稳固的承诺.html
+++ b/_posts/2022-10-07-INITIUM-2022意大利右翼政府上台-民粹其实在落潮-选民期待稳固的承诺.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「Meloni在选后面对低迷的投票率表示抱歉，称最大挑战是让人民重新信任体制。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221007-opinion-italy-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/10/93664013451b45e0b10cf3fa1ed0c82e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年10月5日，罗马，意大利兄弟党领袖梅洛尼（Giorgia Meloni）于会议后离开该党总部。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年10月5日，罗马，意大利兄弟党领袖梅洛尼（Giorgia Meloni）于会议后离开该党总部。<span class="credit">摄：Antonio Masiello/Getty Images</span></figcaption></figure><p><strong>（令溪，波隆纳大学文物修复专业硕士生）</strong></p>
+            <figcaption itemprop="caption">2022年10月5日，罗马，意大利兄弟党领袖梅洛尼（Giorgia Meloni）于会议后离开该党总部。<span class="credit">摄：Antonio Masiello/Getty Images</span></figcaption></figure><p><strong>（令溪，波隆纳大学文物修复专业博士生）</strong></p>
 <p>意大利政治格局之破碎，政党更迭之迅疾声名远扬，“政治危机”在此处如同家常便饭。二战后至今的意大利共和国已经经历了 69 届政府，平均仅能维持 13 个月。自 2018 年大选之后，意大利更换了两位总理，经历了三次执政联盟的瓦解，最终难逃提前大选的命运。</p>
 <p>9 月 27 日，选举结果尘埃落定，右翼联盟大胜，以绝对优势将众议院与参议院过半数席位收入囊中。在民调中领跑的极右翼政党意大利兄弟党（FdI）以 26%的得票率毫无悬念成为意大利议会第一大党，其领导人梅洛尼（Giorgia Meloni）有望成为自墨索里尼（Benito Mussolini）以来意大利第一位极右翼总理。</p>
 <p>在1922年10月使墨索里尼上台的罗马大游行整整100年后，一切看起来都像是法西斯幽灵令人不安的再访：兄弟党直接沿用了反映法西斯主义遗产的三色火焰标志，它继承自曾有墨索里尼孙女参与的全国联盟（National Alliance），而 NA 的前身正是 1946 年从法西斯主义的灰烬中崛起的新法西斯主义政党意大利社会运动（MSI）。这些千丝万缕的联系挑动了欧洲邻国乃至全球最敏感的神经。</p>
