--- a/_posts/2022-10-07-INMEDIA-4公務員涉多次違規取得-免針紙-被捕-警拒透露拘捕準則.html
+++ b/_posts/2022-10-07-INMEDIA-4公務員涉多次違規取得-免針紙-被捕-警拒透露拘捕準則.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/pp_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>警方今日拘捕4名公務員涉串謀詐騙，指她們較早前各自以500至2,500元向已被捕或正被通緝、涉濫發「免針紙」的醫生多次取得免針紙。被問及拘捕理據，警方指，經審視所有證據、被捕人醫療背景及醫療專家的評估，有理由相信她們違法取得「免針紙」，但就以調查手法為由，不願透露拘捕的準則。</p>
 <p><strong>被捕人為3社署職員、1官校教師</strong></p>
 <p>西九龍總區刑事部（行動）警司鍾雅倫表示，警方今早分別在天水圍、觀塘、沙田及紅磡採取拘捕行動，以串謀詐騙罪名拘捕4名本地女子，年齡分別為 25歲、42歲、45歲及48 歲，全為現職公務員，其中3人任職社會福利署，另一人來自教育局，任職官立學校教師。現時4人仍被警方扣留，暫未掌握她們是否認識。</p>
-<p>鍾雅倫指，被捕4人早前各自以500至2,500元，向較早前已被捕或正被通緝、涉濫發「免針紙」的醫生多次取得免針紙，當中牽涉6名醫生。被捕4人每人都最少持有2至3張「免針紙」。</p>
+<p>鍾雅倫指，被捕4人早前各自以500至2,500元，向較早前已被捕或正被通緝、涉濫發「免針紙」的醫生多次取得免針紙，當中牽涉5間診所。被捕4人每人都最少持有2至3張「免針紙」。</p>
 <p>他重申會審視每一張免針紙，「唔會係漏咗嘅」，又稱公務員背景「唔係太重要」，「目標人物嘅職業背景唔係最大考慮，無論係高官又好，普通市民又好，對於我哋都係一樣」。他又認為，公務員更應以身作則打針，批評4人行為自私，除了令個人承受風險外，亦為市民帶來不必要風險，「其中一名被捕人士係一名教師，佢要接觸小朋友，（小朋友）咪要承受額外風險囉」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/F9o2N00AZ5" title="西九龍總區刑事部（行動）警司鍾雅倫"><img src="https://live.staticflickr.com/65535/52410824853_b2c846fdc6_b.jpg" width="1024" alt="西九龍總區刑事部（行動）警司鍾雅倫" /></a><br /><em>鍾雅倫</em></p>
 <p><strong>警方：有相關醫免針紙不等於犯法</strong></p>
