--- a/_posts/2022-10-07-INMEDIA-國泰9千底薪招聘空服員-應徵者稱人工非首要考慮-做得開心就夠.html
+++ b/_posts/2022-10-07-INMEDIA-國泰9千底薪招聘空服員-應徵者稱人工非首要考慮-做得開心就夠.html
@@ -21,7 +21,7 @@ author: 獨媒報導
 <p><strong>應徵者從加拿大回港追夢：對人工無咁執着</strong></p>
 <p>今年23歲的陳小姐為特意從溫哥華回港參加招聘，她指「以前屋企人飛得多，空姐係一直嘅夢想」，遂對今次國泰重啟招聘感到興奮，毅然放棄溫哥華的文員工作回港應徵。她表示，不憂慮航空業會再臨「裁員潮」：「就算真係，之前都有請返炒咗嘅人，咁我咪再做過（前員工任初級職位），都無咩所謂，係自己嘅興趣夢想就對人工無咁執着。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/z62zU89RpW" title="無標題"><img src="https://live.staticflickr.com/65535/52410230794_84eaac04ec_b.jpg" width="1024" alt="無標題" /></a><br /><em>張先生（左）</em></p>
-<p>從事侍應、35歲的張先生第二度應徵國泰空少，他指事前已知底薪僅為9,000元，「都知低人工」，但他認為空少與侍應同樣受旅遊因素影響收入，「已經習慣適應到薪酬起伏，同埋本身人工都唔高」，亦對香港航空業有信心，可以達至90小時飛行時數。</p>
+<p>從事零售業、35歲的張先生第二度應徵國泰空少，他指事前已知底薪僅為9,000元，「都知低人工」，但他認為空少與侍應同樣受旅遊因素影響收入，「已經習慣適應到薪酬起伏，同埋本身人工都唔高」，亦對香港航空業有信心，可以達至90小時飛行時數。</p>
 <p>當記者問及，對於國泰以新入職空服員價錢聘請「回娘家」的資深員工有何看法時，張先生回應指「睇佢自己接唔接受到啦，都無咩睇法。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/59876MT298" title="無標題"><img src="https://live.staticflickr.com/65535/52410393075_e9939455c5_b.jpg" width="1024" alt="無標題" /></a><br /><em>陳同學</em></p>
 <p><strong>應徵者對前景有信心：做得開心就夠</strong></p>
