--- a/_posts/2022-10-09-INITIUM-早报-普京指控乌克兰策划袭击刻赤海峡大桥.html
+++ b/_posts/2022-10-09-INITIUM-早报-普京指控乌克兰策划袭击刻赤海峡大桥.html
@@ -14,7 +14,7 @@ author:
 <p>当地周六，刻赤海峡大桥上一列油罐货运列车突然爆炸，多个油罐爆燃，造成部分桥面坍塌。俄方官员称，爆炸导致附近另一辆汽车内三人死亡。</p>
 <p>普京周日在与俄罗斯调查委员会主任巴斯特里金（Alexander Bastrykin）会见时发表上述言论。他直言这起事件是乌克兰安全机构所为，而且也令乌方获益。</p>
 <p>巴斯特里金指，调查人员确认，爆炸油罐车在抵达大桥之前，经过了保加利亚、格鲁吉亚、亚美尼亚、南奥塞梯和俄罗斯的克拉斯诺达尔地区。他下令对事件彻查。</p>
-<p>乌克兰方面没有承认发动这次袭击。乌克兰总统波多利雅科（Mykhailo Podolyak）否认普京的指控，称乌俄双方“只有一个恐怖主义国家，全世界都知道是谁”。</p>
+<p>乌克兰方面没有承认发动这次袭击。乌克兰总统顾问波多利雅科（Mykhailo Podolyak）否认普京的指控，称乌俄双方“只有一个恐怖主义国家，全世界都知道是谁”。</p>
 <p><a href="https://www.bbc.com/news/world-europe-63195504">BBC指</a>，爆炸发生数小时后，大桥公路部分已有限恢复通车，但只允许轻量级汽车通过。目前大桥铁路部分，即油罐车爆燃处，也已重新开放。</p>
 <p>事实上，这座全场19公里的大桥并非单纯民用设施，它也是俄罗斯驻乌克兰南部军队的一条重要补给线。</p>
 <p>该桥还具有象征意义。2014年俄罗斯吞并克里米亚后，普京下令修建这座大桥。2018年5月大桥通货车时，普京本人曾亲自到场，驾驶货车庆祝。2019年12月大桥铁路通车时，普京也出席了通车仪式，乘坐第一班列车通过大桥。</p>
