--- a/_posts/2022-10-10-INMEDIA-前民陣召集人陳皓桓出獄-引-聖馬力諾之心-與港人互勉.html
+++ b/_posts/2022-10-10-INMEDIA-前民陣召集人陳皓桓出獄-引-聖馬力諾之心-與港人互勉.html
@@ -12,13 +12,13 @@ author: 獨媒報導
 <p><strong>憶離世父親泛淚光 感謝親友支持</strong></p>
 <p>陳皓桓今早離開石壁監獄，社民連前主席黃浩銘前往「接放學」，並一同到東涌見親友及記者。社民連主席陳寶瑩、曾健成、民主黨劉慧卿、工黨何秀蘭等人在場迎接，並逐一與陳擁抱。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/G05yk0U5X8" title="無標題"><img src="https://live.staticflickr.com/65535/52417124650_f8da676ba4_b.jpg" width="1024" alt="無標題" /></a></p>
-<p>陳皓桓首先感謝寫信、探監和送車的朋友，「永遠唔會忘記啲人送車嘅畫面，真係好感動」。陳再特意感謝家人支持，眼泛淚光提到父親在數個月前離世，在獄中未能見到爸爸在醫院離世一刻，只能出席喪禮，「我每一日都有回憶住，自己爸爸嚟到法庭睇我嘅時候，要人扶住佢去見我，冇得再同佢去講啦……多謝我阿爸」。</p>
+<p>陳皓桓首先感謝寫信、探監和送車的朋友，「永遠唔會忘記啲人送車嘅畫面，真係好感動」。陳再特意感謝家人支持，眼泛淚光提到父親在數個月前離世，在獄中未能見到爸爸在醫院離世一刻，只能出席喪禮，「我每一日都有回憶住，自己爸爸嚟到法庭睇我嘅時候，要人扶住佢去見我，冇得再同佢去講啦⋯⋯多謝我阿爸」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/b43oMNGj34" title="無標題"><img src="https://live.staticflickr.com/65535/52417190003_7b196bb0de_b.jpg" width="1024" alt="無標題" /></a><br /><em>社民連主席陳寶瑩</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/kXK6B61678" title="無標題"><img src="https://live.staticflickr.com/65535/52417123175_46eeef66c4_b.jpg" width="1024" alt="無標題" /></a><br /><em>社運人士古思堯</em></p>
 <p><strong>稱「非常非常非常唔想移民」</strong></p>
 <p>陳續指，自己不會刻意違法，但強調應在心中堅持信念，「我都希望香港人唔好驚咗發聲、驚咗爭取應有嘅嘢，譬如全民退休保障、標準工時」。</p>
 <p>民陣在陳皓桓身在獄中時解散，他對此感到可惜和遺憾，指在獄中也有對解散聲明給予意見，而民陣已將所有資產按章捐予慈善機構，「而家個社會轉變咗，我哋唔可以再靠單一嘅組織去發聲、靠單一個人去發聲，覺得有咩唔公義、唔公平嘅，無論自己屋邨又好、學校又好、去，都應該要發聲」。</p>
-<p>陳又笑道，未來一定會先去旅行，但指在五年內不會離開香港，「我而家係非常非常非常之唔想移民」。他最後稱希望以Dear Jane的歌曲《聖馬力諾之心》與港人互勉。</p>
+<p>陳皓桓又笑道，未來一定會先去旅行，但指在五年內不會離開香港，「我宜家係非常非常非常之唔想移民」。他最後稱希望以Dear Jane的歌曲《聖馬力諾之心》與港人互勉。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Ld3h4v0459" title="無標題"><img src="https://live.staticflickr.com/65535/52416167422_c2217abb90_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>今年26歳的陳皓桓自2018年起擔任民陣副召集人，至2020年10月起從社民連岑子杰手中接棒，擔任召集人。他涉及被指控的社會運動事件包括2019年的9.15港島遊行、10.1遊行、10.20九龍遊行，以及2020年的六四集會及七一遊行，分別被判囚3個月至18個月不等，總刑期合共22個月，並在去年5月底開始服刑。</p>
 </div></div></div>
