--- a/_posts/2022-10-12-INMEDIA-北歡而散-後稱經一事長一智-江玉歡-愛國先要做建設性批評.html
+++ b/_posts/2022-10-12-INMEDIA-北歡而散-後稱經一事長一智-江玉歡-愛國先要做建設性批評.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20221012kk.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>立法會議員江玉歡日前不滿，遭工聯會吳秋北形容為做「猴戲」，宣布與工聯會的兩個聯合辦事處拆夥。在「北歡而散」後，江玉歡今早在一個電台節目形容「經一事長一智」，並表明繼續發聲及協助市民，「我哋係代議士嚟㗎嘛」：「愛國先要做建設性批評，咁呢個社會先會進步。」</p>
+<img src="https://www.inmediahk.net/files/column_images/20221012kk.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>立法會議員江玉歡日前不滿遭工聯會吳秋北形容為做「猴戲」，宣布與工聯會的兩個聯合辦事處拆夥。在「北歡而散」後，江玉歡今早在一個電台節目形容「經一事長一智」，並表明繼續發聲及協助市民，「我哋係代議士嚟㗎嘛」：「愛國先要做建設性批評，咁呢個社會先會進步。」</p>
 <p>本身是律師的江玉歡，早前質疑政府劃一廢除逾兩萬多張「免針紙」，欠缺法律理據。有市民日前入稟司法覆核，高等法院昨日已批出臨時禁制令暫緩廢除，政府傍晚亦宣布暫緩廢除，該批「免針紙」繼續生效直至法庭另行頒令。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/o2cZvSRU88" title="螢幕截圖 2022-10-12 下午5.53.22"><img src="https://live.staticflickr.com/65535/52422298041_0996242a67_b.jpg" width="873" alt="螢幕截圖 2022-10-12 下午5.53.22" /></a></p>
 <p><strong>吳秋北改口  稱「猴戲」不涉任何事件或人物</strong></p>
