--- a/_posts/2022-10-14-INMEDIA-警務處再辦保護兒童計劃-蕭澤頤稱支持訂強制舉報虐兒機制.html
+++ b/_posts/2022-10-14-INMEDIA-警務處再辦保護兒童計劃-蕭澤頤稱支持訂強制舉報虐兒機制.html
@@ -19,5 +19,5 @@ author: 獨媒報導
 <p><strong>設電車展覽 推聊天機器人關懷兒童</strong></p>
 <p>大會主持其後介紹計劃內容，包括電車展覽、社會實驗、藝術工作坊、徽章設計比賽等，更在應用程式推出「聊天機器人Chatbot」功能，「例如小朋友話自己唔開心，機器人就會了解佢嘅背景資料，包括性別、年齡同情緒需要，之後機器人就會提供相關機構嘅關懷資訊畀佢」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/vx87nwE805" title="無標題"><img src="https://live.staticflickr.com/65535/52426830710_55d23968aa_b.jpg" width="1024" alt="無標題" /></a></p>
-<p>一眾嘉賓其後登上兩部流動展覽電車，電車將於今日起啟航。《獨媒》記者之後亦上車視察，車身內外均貼有特色壁紙，包括介紹「暴躁獸」、「口多多獸」，亦有「Let’s Listen」、「Let’s be Kind」、「旁觀者Change 欺凌行為就變零」等口號，兩輛。</p>
+<p>一眾嘉賓其後登上兩部流動展覽電車，電車將於今日起啟航。《獨媒》記者之後亦上車視察，車身內外均貼有特色壁紙，包括介紹「暴躁獸」、「口多多獸」，亦有「Let’s Listen」、「Let’s be Kind」、「旁觀者Change 欺凌行為就變零」等口號。</p>
 </div></div></div>
