--- a/_posts/2022-10-14-INMEDIA-憑穿洞荷葉奪花道世一-專訪梁偉怡-在自己範疇做到最好-讓人見到這是-香港人.html
+++ b/_posts/2022-10-14-INMEDIA-憑穿洞荷葉奪花道世一-專訪梁偉怡-在自己範疇做到最好-讓人見到這是-香港人.html
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p> 後來，梁偉怡回到香港之後，嘗試插花，但覺得怎樣插都不是那麼一回事：「呃唔到自己，無嗰份感動。」他之後在網上翻查資料，發現這種讓他難以忘記的插花方式，叫做「日本花道」，就去拜師學藝。他一星期上六堂課，每年去日本四次，並自學日文研究與花道有關的書籍：「學花道沒有捷徑，沒有速成，沒有天賦，只有用功。」</p>
 <p>日本花道又稱「華道」，源於佛堂供花的習俗。在14至16世紀室町時期，京都「池坊」確立花道學說，因此被認為是日本花道的起源，再發展出不同流派。2010年，梁偉怡於日本池坊中央研修學院東京校以第一名的修畢課程；同時，他在學術方面的成就累積得愈來愈多，在中大、浸大、理大都做過講師。</p>
 <p>那時候，梁偉怡認為香港的大學教育愈見變質腐爛：「以前的大學教授，都不會告訴你看哪本書，全部是自己看。他會告訴你『甚麼是hea，不准hea』。但現在的大學生只是來拿個學位，大學商業化得很嚴重，高層又把那些學生當作消費者看待。」因為看不過眼，梁偉怡於2016年離開學界，專心教授花道。</p>
-<p>現在，他是華道家元池坊香港支部長，學生從6歲到80歲都有。說起他們時，梁偉怡臉上帶著自豪：「我不會提醒他們交學費，他們記得就交。我說，如果你見老師餓死都沒關係，那就不必交學費，他們就會自動自覺。教育不只是教知識，是教態度。」</p>
+<p>現在，他是華道家元池坊香港支部長，學生從6歲到80歲都有。說起他們時，梁偉怡臉上帶著自豪：「初教插花時，我不會提醒他們交學費，他們記得就交。我說，如果你見老師餓死都沒關係，那就不必交學費，他們就會自動自覺。教育不只是教知識，是教態度。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9n9V07LE8H" title="DSC_7886"><img src="https://live.staticflickr.com/65535/52346353462_f3ffeee078_c.jpg" width="800" alt="DSC_7886" /></a></p>
 <p><strong>放下執念 以花道觀照世界</strong></p>
 <p>對梁偉怡而言，花道不僅與自然交流，更是連結人與人的藝術。幾株鮮花與嫩草的擺放，猶勝千言萬語。最令梁偉怡深刻的一次，是當他在日本池坊修行時，用冷麵盒做花器：「我想嘗試更多可能性，在生活設計層面應用。」老師的父親到場察看，並在梁偉怡的作品面前望了很久，沒有說話。但他開口時，一語道破梁偉怡的內心想法：「嗯，這是令人很有食慾的作品。我想我們今後可以做多些令人『有食慾的作品』。」梁偉怡大感驚訝，因為老師的父親與他並不認識，只是單憑花道作品就明白了他的內心。</p>
